# FINCH-debris-analysis

./: ActivityLog  README.md  das.prj  debris.csv  matprop.csv  payloads.csv  plot.ipynb  pyproject.toml  reentry.csv  req52data.csv  rocketbodies.csv  xsectional.csv
data/: orbit_lifetime.csv
output_data/: orbit_lifetime_measurements.csv
